--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,16 +6,22 @@
     <head>
     	<meta charset="utf-8">
         <title>@title</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <!-- CSS sheet -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
     </head>
     <body>
-    	@content
+    	<div class="top-navigation">
+    		<div id="wrapper">
+  				<div id="page-wrapper">
+    				@content
+    			</div>
+    		</div>
+    	</div>
     	
     	<!-- Script js -->
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		<script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
     </body>
