--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -50,6 +50,46 @@
 	    </div>
 	  </nav>
 	</div>
+	
+	
+	<div class="wrapper wrapper-content">
+      <div class="container">
+        <div class="row">
+		  <div class="col-lg-12">
+		    <div class="ibox float-e-margins">
+		      <div class="ibox-title">
+		        <h3>Stocks</h3>
+		      </div>
+		      <div class="ibox-content">
+		        <div class="table-responsive">
+		          <table class="table table-striped">
+		            <thead>
+		            <tr>
+		              <th>Produit</th>
+		              <th>Prix</th>
+		              <th>Quantité</th>
+		              <th>Prix Total</th>
+		              <th>Date</th>
+		            </tr>
+		            </thead>
+		            <tbody>
+			            <tr>
+			              <td>{{order.deal.name}}</td>
+			              <td>{{(1 - order.deal.discount) * order.deal.price}}</td>
+			              <td>{{ order.quantity }}</td>
+			              <td>{{ ((1 - order.deal.discount) * order.deal.price) * order.quantity }}</td>
+			              <td>{{ order.validatedAt | date:"dd MMMM 'at' h:mma"}}</td>
+			            </tr>
+		            </tbody>
+		          </table>
+		        </div>
+		
+		      </div>
+		    </div>
+		  </div>
+		</div>
+      </div>
+    </div>
 }
 
 @main("Project champagne")(navbar) {
