--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,28 +1,51 @@
-@(title: String)(content: Html)(navbar: Html)
+@(user: User = null, scripts: Html = Html(""))(content: Html)
 
 <!DOCTYPE html>
 
 <html>
     <head>
-    	<meta charset="utf-8">
-        <title>@title</title>
-        <!-- CSS sheet -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <title>@Messages("title")</title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="@routes.Assets.at("javascripts/jquery/jquery-2.1.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.min.css")">
+        @scripts
     </head>
     <body>
-    	<div class="top-navigation">
-    		<div id="wrapper">
-  				<div id="page-wrapper">
-    				@content
-    			</div>
-    		</div>
-    	</div>
-    	
-    	<!-- Script js -->
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-		<script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
+
+        <div ng-controller="MenuCtrl" class="navbar navbar-inverse navbar-default" role="navigation">
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="fa fa-bars fa-lg fa-inverse"></span>
+                </button>
+                <a class="navbar-brand" href="@routes.Application.index()">
+                    <i class="fa fa-rocket"></i> Project name
+                </a>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class=""><a href="@routes.Application.index()">Home</a></li>
+                </ul>
+            </div>
+            @logged(user)
+        </div>
+
+        <div class="container">
+            <div class="row">
+                @content
+            </div>
+        </div>
+
+        <hr>
+        <div class="footer text-center">
+            <div>
+                <small>
+                    Hello! I'm your friendly footer. If you're actually reading this, I'm impressed....
+                    <a href="https://github.com/yesnault/PlayStartApp">Fork me on Github</a> <i class="fa fa-github fa-1"></i> <a href="https://github.com/yesnault/PlayStartApp">https://github.com/yesnault/PlayStartApp</a>
+                </small>
+            </div>
+        </div>
     </body>
 </html>
