--- a/app/views/dashboard/index.scala.html
+++ b/app/views/dashboard/index.scala.html
@@ -2,6 +2,43 @@
 
 @main(user) {
 
-    DASHBOARD Example
+    <div class="wrapper wrapper-content">
+      <div class="container">
+        <div class="row">
+		  <div class="col-lg-12">
+		    <div class="ibox float-e-margins">
+		      <div class="ibox-title">
+		        <h3>Stocks</h3>
+		      </div>
+		      <div class="ibox-content">
+		        <div class="table-responsive">
+		          <table class="table table-striped">
+		            <thead>
+		            <tr>
+		              <th>Nom - Espèce</th>
+		              <th>Type</th>
+		              <th>Quantité</th>
+		              <th>Seuil Min</th>
+		              <th>Seuil Max</th>
+		            </tr>
+		            </thead>
+		            <tbody>
+			            <tr>
+			              <td>Pomme - Golden</td>
+			              <td>Fruit</td>
+			              <td>20 kilogrammes</td>
+			              <td>8 kilogrammes</td>
+			              <td>30 kilogrammes</td>
+			            </tr>
+		            </tbody>
+		          </table>
+		        </div>
+		
+		      </div>
+		    </div>
+		  </div>
+		</div>
+      </div>
+    </div>
 
 }
