--- a/app/views/logged.scala.html
+++ b/app/views/logged.scala.html
@@ -1,14 +1,52 @@
 @(user: User)
 
 @if(user != null) {
-    <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> @user.fullname <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-                <li><a href="@controllers.account.settings.routes.Index.index()"><i class="fa fa-wrench"></i> @Messages("settings")</a></li>
-                <li class="divider"></li>
-                <li><a href="@routes.Application.logout()"><i class="fa fa-power-off"></i> @Messages("logout")</a></li>
-            </ul>
-        </li>
-    </ul>
+		<div ng-controller="MenuCtrl" class="row border-bottom white-bg" role="navigation">
+		  <nav class="navbar navbar-static-top" role="navigation">
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="fa fa-bars fa-lg fa-inverse"></span>
+                </button>
+                <a class="navbar-brand" href="@routes.Application.index()">
+                    <i class="fa fa-rocket"></i> Champagne
+                </a>
+		    </div>
+		    <div class="navbar-collapse collapse" id="navbar" nav-collapse>
+		      <ul class="nav navbar-nav">
+		        <li>
+		          <a aria-expanded="false" role="button" href="@routes.Application.index()"><i class="fa fa-home imenu"></i> Stocks</a>
+		        </li>
+		        <li>
+		          <a aria-expanded="false" role="button"><i class="fa fa-users imenu"></i> Restaurants</a>
+		        </li>
+		        <li>
+		          <a aria-expanded="false" role="button"><i class="fa fa-shopping-cart imenu"></i> Fournisseurs</a>
+		        </li>
+		        <li class="dropdown">
+		          <a aria-expanded="false" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags fa-flip-horizontal imenu"></i> Commandes<span
+		            class="caret"></span></a>
+		          <ul role="menu" class="dropdown-menu">
+		            <li><a>Commandes a traiter</a></li>
+		            <li><a>Commandes en cours</a></li>
+		            <li><a>Commandes traites</a></li>
+		          </ul>
+		        </li>
+		        <li>
+		          <a aria-expanded="false" role="button"><i class="fa fa-shopping-cart imenu"></i> Produits</a>
+		        </li>
+		      </ul>
+		      <ul class="nav navbar-nav navbar-right">
+		        <li class="dropdown">
+		            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> @user.fullname <b class="caret"></b></a>
+		            <ul class="dropdown-menu">
+		                <li><a href="@controllers.account.settings.routes.Index.index()"><i class="fa fa-wrench"></i> @Messages("settings")</a></li>
+		                <li><a href="@routes.Application.logout()"><i class="fa fa-power-off"></i> @Messages("logout")</a></li>
+		            </ul>
+		        </li>
+		      </ul>
+		    </div>
+		  </nav>
+		</div>
+   
 }
