--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -3,35 +3,49 @@
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(twitterBootstrapInput.render) }
 
-<h3>@Messages("signin.signin")</h3>
+<div class="loginColumns animated fadeInDown">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="ibox-title pink">
+		<h1>@Messages("Connexion")</h1>
+	  </div>
 
-@form(routes.Application.authenticate(), 'class -> "form") {
-
-    @if(loginForm.hasGlobalErrors) {
-        <p class="error">
-            <span class="label label-danger">@loginForm.globalError.message</span>
-        </p>
-    }
-
-    <fieldset>
-        @inputText(
-            loginForm("email"),
-            'placeholder -> Messages("email"),
-            '_label -> null,
-            '_help -> Messages("signin.your.email"),
-            'class -> "form-control"
-        )
-        @inputPassword(
-            loginForm("password"),
-            '_label -> null,
-            'placeholder -> Messages("password"),
-            '_help -> Messages("signin.your.password"),
-            'class -> "form-control"
-        )
-    </fieldset>
-
-    <div class="form-actions">
-        <input type="submit" class="btn btn-primary" value="@Messages("signin.signin")">
-        <small><a href="@controllers.account.routes.Reset.ask">@Messages("forgot.password")</a></small>
-    </div>
+	  <div class="ibox-content">
+		@form(routes.Application.authenticate(), 'class -> "form") {
+		
+		    @if(loginForm.hasGlobalErrors) {
+		        <p class="error">
+		            <span class="label label-danger">@loginForm.globalError.message</span>
+		        </p>
+		    }
+		
+		    <fieldset>
+		        @inputText(
+		            loginForm("email"),
+		            'placeholder -> Messages("email"),
+		            '_label -> null,
+		            '_help -> Messages("signin.your.email"),
+		            'class -> "form-control input-lg"
+		        )
+		        @inputPassword(
+		            loginForm("password"),
+		            '_label -> null,
+		            'placeholder -> Messages("password"),
+		            '_help -> Messages("signin.your.password"),
+		            'class -> "form-control input-lg"
+		        )
+		    </fieldset>
+		
+		    <div class="form-actions">
+		        <div class="form-group submit">
+            		<button type="submit" class="btn btn-primary block full-width m-b"><i class="fa fa-sign-in"></i> Se connecter
+          			</button>
+          		</div>
+		        <a class="pass-forgot" href="@controllers.account.routes.Reset.ask">
+            		<small>Mot de passe oublie?</small>
+          		</a>
+		    </div>
+		  </div>
+	</div>
+</div>
 }
