Store page added

--- a/app/views/logged.scala.html
+++ b/app/views/logged.scala.html
@@ -18,7 +18,7 @@
 		          <a aria-expanded="false" role="button" href="@routes.Application.index()"><i class="fa fa-home imenu"></i> Stocks</a>
 		        </li>
 		        <li>
-		          <a aria-expanded="false" role="button"><i class="fa fa-users imenu"></i> Restaurants</a>
+		          <a aria-expanded="false" role="button" href="@routes.Store.index()"><i class="fa fa-users imenu"></i> Restaurants</a>
 		        </li>
 		        <li>
 		          <a aria-expanded="false" role="button"><i class="fa fa-shopping-cart imenu"></i> Fournisseurs</a>
