Menu completely fixed & main classes created

--- a/app/views/orders/orderInProgress.scala.html
+++ b/app/views/orders/orderInProgress.scala.html
@@ -8,38 +8,35 @@
 		  <div class="col-lg-12">
 		    <div class="ibox float-e-margins">
 		      <div class="ibox-title">
-		        <h3>Restaurants</h3>
+		        <h3>Commandes en cours de traitement</h3>
 		      </div>
 		      <div class="ibox-content">
 		        <div class="table-responsive">
 		          <table class="table table-striped">
 		            <thead>
 		            <tr>
-		              <th>Nom</th>
-		              <th>Mail</th>
-		              <th>Adresse</th>
-		              <th>Code Postal</th>
-		              <th>Ville</th>
+		              <th>Numero de commande</th>
+		              <th>Restaurant</th>
+		              <th>Nombre de produit</th>
+		              <th>Fournisseur</th>
+		              <th>Date de traitement</th>
 		              <th></th>
 		            </tr>
 		            </thead>
 		            <tbody>
 			            <tr>
-			              <td>Aux Quatres Moulains</td>
-			              <td>o4moulains@@gmail.com</td>
-			              <td>110 avenue Victor Hugo</td>
-			              <td>92012</td>
-			              <td>Boulogne-bilancourt</td>
+			              <td>00001005</td>
+			              <td>Mucho Mex</td>
+			              <td>4</td>
+			              <td>Go deliever</td>
+			              <td>2015-03-15 18:30:00</td>
 			              <td>
-			              	<button class="btn btn-custom btn-s" title="Modifier"><i class="fa fa-cog"></i></button>
+			              	<button class="btn btn-custom btn-s" title="Detail"><i class="fa fa-cog"></i></button>
                     	  	<button class="btn btn-custom btn-s" title="Supprimer"><i class="fa fa-trash-o"></i></button>
                     	  </td>
 			            </tr>
 		            </tbody>
 		          </table>
-		          <a class="add-link" href="#">
-     				<button class="btn btn-custom add"><i class="fa fa-plus"></i> Ajouter un restaurant</button>
-     			  </a>
 		        </div>
 		
 		      </div>
