--- a/app/views/logged.scala.html
+++ b/app/views/logged.scala.html
@@ -15,25 +15,25 @@
 		    <div class="navbar-collapse collapse" id="navbar" nav-collapse>
 		      <ul class="nav navbar-nav">
 		        <li>
-		          <a aria-expanded="false" role="button" href="@routes.Application.index()"><i class="fa fa-home imenu"></i> Stocks</a>
+		          <a aria-expanded="false" role="button" href="@routes.Dashboard.index()"><i class="fa fa-home imenu"></i> Stocks</a>
 		        </li>
 		        <li>
 		          <a aria-expanded="false" role="button" href="@routes.Store.index()"><i class="fa fa-users imenu"></i> Restaurants</a>
 		        </li>
 		        <li>
-		          <a aria-expanded="false" role="button"><i class="fa fa-shopping-cart imenu"></i> Fournisseurs</a>
+		          <a aria-expanded="false" role="button" href="@routes.Supplier.index()"><i class="fa fa-shopping-cart imenu"></i> Fournisseurs</a>
 		        </li>
 		        <li class="dropdown">
 		          <a aria-expanded="false" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags fa-flip-horizontal imenu"></i> Commandes<span
 		            class="caret"></span></a>
 		          <ul role="menu" class="dropdown-menu">
-		            <li><a>Commandes a traiter</a></li>
-		            <li><a>Commandes en cours</a></li>
-		            <li><a>Commandes traites</a></li>
+		            <li><a href="@routes.OrderToHandle.index()">Commandes a traiter</a></li>
+		            <li><a href="@routes.OrderInProgress.index()">Commandes en cours</a></li>
+		            <li><a href="@routes.OrderValid.index()">Commandes traites</a></li>
 		          </ul>
 		        </li>
 		        <li>
-		          <a aria-expanded="false" role="button"><i class="fa fa-shopping-cart imenu"></i> Produits</a>
+		          <a aria-expanded="false" role="button" href="@routes.Product.index()"><i class="fa fa-shopping-cart imenu"></i> Produits</a>
 		        </li>
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
