Added created product page

--- a/app/views/product.scala.html
+++ b/app/views/product.scala.html
@@ -12,7 +12,7 @@
 		      </div>
 		      <div class="ibox-content">
 		        <div class="table-responsive">
-		          <a class="add-link" href="#">
+		          <a class="add-link" href="@routes.Product.addProduct()">
      				<button class="btn btn-custom add"><i class="fa fa-plus"></i> Creer un produit</button>
      			  </a>
 		          <table class="table table-striped">
