--- a/app/views/store.scala.html
+++ b/app/views/store.scala.html
@@ -12,8 +12,8 @@
 		      </div>
 		      <div class="ibox-content">
 		        <div class="table-responsive">
-		          <a class="add-link" href="#">
-     				<button class="btn btn-custom add"><i class="fa fa-plus"></i> Ajouter un restaurant</button>
+		          <a class="add-link" href="@routes.Store.viewAddStore()">
+     				<button class="btn btn-custom add" ><i class="fa fa-plus"></i> Ajouter un restaurant</button>
      			  </a>
 		          <table class="table table-striped">
 		            <thead>
