Improve froms design & employee section added

--- a/app/views/addEmployee.scala.html
+++ b/app/views/addEmployee.scala.html
@@ -6,31 +6,36 @@
 			<div class="col-lg-12">
 				<div class="ibox float-e-margins">
 					<div class="ibox-title">
-						<h3>Creation d'un fournisseur</h3>
+						<h3>Ajout d'un employee</h3>
 					</div>
 					<div class="ibox-content">
 
-						<form method="post" class="form-horizontal">
-							<div class="form-group">
-							  <label class="col-sm-2 control-label">Nom du fournisseur</label>
+						<form class="form-horizontal" method="post">
+						  <div class="form-group">
+							  <label class="col-sm-2 control-label">Nom</label>
 							  <div class="col-sm-10">
-							    <input class="form-control" type="text" name="name">
+							    <input class="form-control" type="text" name="lastname">
 							  </div>
-						    </div>
-						    <div class="hr-line-dashed"></div>
-						    <div class="form-group">
+						  </div><br/>
+						  <div class="form-group">
+							  <label class="col-sm-2 control-label">Prenom</label>
+							  <div class="col-sm-10">
+							    <input class="form-control" type="text" name="firstname">
+							  </div>
+						  </div><br/>
+						  <div class="form-group">
 							  <label class="col-sm-2 control-label">Adresse 1</label>
 							  <div class="col-sm-10">
 							    <input class="form-control" type="text" name="address1">
 							  </div>
-						    </div><br/>
-						    <div class="form-group">
+						  </div><br/>
+						  <div class="form-group">
 							  <label class="col-sm-2 control-label">Adresse 2</label>
 							  <div class="col-sm-10">
 							    <input class="form-control" type="text" name="address2">
 							  </div>
-						    </div><br/>
-						    <div class="form-group">
+						  </div><br/>
+						  <div class="form-group">
 							  <label class="col-sm-2 control-label">Code Postal</label>
 							  <div class="col-sm-4">
 							    <input class="form-control" type="text" name="post_code">
@@ -39,32 +44,7 @@
 							  <div class="col-sm-4">
 							    <input class="form-control" type="text" name="city">
 							  </div>
-						    </div><br/>
-							
-							<h3>Administrateur</h3>
-							<div class="table-responsive">
-								<table class="table table-striped">
-								</table>
-							</div>
-
-							<div class="form-group">
-							  <label class="col-sm-2 control-label">E-mail</label>
-							  <div class="col-sm-10">
-							    <input class="form-control" type="email" name="email">
-							  </div>
-						    </div><br/>
-						    <div class="form-group">
-							  <label class="col-sm-2 control-label">Nom</label>
-							  <div class="col-sm-10">
-							    <input class="form-control" type="text" name="lastname">
-							  </div>
-						    </div><br/>
-						    <div class="form-group">
-							  <label class="col-sm-2 control-label">Prenom</label>
-							  <div class="col-sm-10">
-							    <input class="form-control" type="text" name="firstname">
-							  </div>
-						    </div><br/>
+						    </div>
 							
 							<div class="hr-line-dashed"></div>
 
