--- a/app/views/logged.scala.html
+++ b/app/views/logged.scala.html
@@ -35,6 +35,9 @@
 		        <li>
 		          <a aria-expanded="false" role="button" href="@routes.Product.index()"><i class="fa fa-shopping-cart imenu"></i> Produits</a>
 		        </li>
+		        <li>
+		          <a aria-expanded="false" role="button" href="@routes.Employee.index()"><i class="fa fa-users imenu"></i> Employees</a>
+		        </li>
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
 		        <li class="dropdown">
