--- a/app/views/addStore.scala.html
+++ b/app/views/addStore.scala.html
@@ -12,26 +12,50 @@
 		        <h3>Ajouter un restaurant</h3>
 		      </div>
 
-<div class="ibox-content">
-
-<form method="post" action="@routes.Store.addStore()" >
-
-<label class="btn btn-custom btn-s">Nom du restaurant</label> <input type="text" name="name"><br/>
-<label class="btn btn-custom btn-s">Adresse 1</label> <input type="text" name="adresse1"><br/>
-<label class="btn btn-custom btn-s">Adresse 2</label> <input type="text" name="adresse2"><br/>
-<label class="btn btn-custom btn-s">Code Postal</label> <input type="text" name="codePostal">
-<label class="btn btn-custom btn-s">Ville</label> <input type="text" name="villes">
-
-<div class="button text-center">
-<button class="btn btn-primary btn-lg active">Continuer</button>
-</div>
-</form>
-	
-</div>
-</div>
-</div>
-</div>
-</div>
+				<div class="ibox-content">
+				
+					<form method="post" class="form-horizontal" action="@routes.Store.addStore()" >
+					  <div class="form-group">
+						<label class="col-sm-2 control-label">Nom du restaurant</label>
+						<div class="col-sm-10">
+						  <input class="form-control" type="text" name="name">
+						</div>
+					  </div>
+					  <div class="hr-line-dashed"></div>
+					  <div class="form-group">
+						<label class="col-sm-2 control-label">Adresse 1</label>
+						<div class="col-sm-10">
+						  <input class="form-control" type="text" name="address1">
+						</div>
+					  </div><br/>
+					  <div class="form-group">
+						<label class="col-sm-2 control-label">Adresse 2</label>
+						<div class="col-sm-10">
+						  <input class="form-control" type="text" name="address2">
+						</div>
+					  </div><br/>
+					  <div class="form-group">
+						<label class="col-sm-2 control-label">Code Postal</label>
+						<div class="col-sm-4">
+						  <input class="form-control" type="text" name="post_code">
+						</div>
+						<label class="col-sm-2 control-label">Ville</label>
+						<div class="col-sm-4">
+						  <input class="form-control" type="text" name="city">
+						</div>
+					  </div>
+					  <div class="hr-line-dashed"></div>
+						
+						<div class="button text-center">
+							<button class="btn btn-primary btn-lg active">Continuer</button>
+						</div>
+					</form>
+					
+				</div>
+			 </div>
+		  </div>
+		</div>
+	  </div>
 </div>	      
 		      
 
