Forms changes & bugs

--- a/app/views/addStore.scala.html
+++ b/app/views/addStore.scala.html
@@ -14,24 +14,16 @@
 		      <div class="ibox-title">
 		        <h3>Ajouter un restaurant</h3>
 		      </div>
-				@helper.form(action=routes.Store.addStore) {
-				<div class="ibox-content">
-				
-				@if(form.hasGlobalErrors) {
-				    <p class="error">
-				        @form.globalError.message
-				       Erreur !
-				    </p>
-				}
+				<!-- @helper.form(action=routes.Store.addStore) { -->
 
 				<div class="ibox-content">
 				
-				@if(form.hasGlobalErrors) {
-				    <p class="error">
-				        @form.globalError.message
-				       Erreur !
-				    </p>
-				}
+				  @if(form.hasGlobalErrors) {
+				      <p class="error">
+				           @form.globalError.message
+				         Erreur !
+				      </p>
+				  }
 				
 					<form method="post" class="form-horizontal" action="@routes.Store.addStore()" >
 					  <div class="form-group">
@@ -72,11 +64,10 @@
 					
 				</div>
 			 </div>
+			 <!-- } -->
 		  </div>
 		</div>
 	  </div>
->>>>>>> master
 </div>	      
-		      
 
 }
