--- a/app/views/dashboard/index.scala.html
+++ b/app/views/dashboard/index.scala.html
@@ -1,4 +1,4 @@
-@(user: User, stocks : java.util.List[models.Stock])
+@(user: User, stocks : java.util.List[models.StoresProducts])
 
 @main(user) {
 
